@@ -1,12 +1,22 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
+
 plugins {
     id 'java'
+    id 'com.github.eerohele.saxon-gradle' version '0.8.0'
     id 'maven-publish'
     id 'signing'
     id 'application'
+    id 'distribution'
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
+    jcenter()    
     maven { 
         url "https://oss.sonatype.org/content/repositories/snapshots" 
     }
@@ -48,7 +58,7 @@ jar {
     manifest {
         attributes('Implementation-Title': 'Cairo sets out to provide an enterprise grade, MRCPv2 compliant speech solution utilizing existing open source speech resources.',
                    'Implementation-Vendor': 'switch',
-                   'Implementation-Version': version,
+                   'Implementation-Version': version, 
                    'Built-By'       : System.properties['user.name'],
                    'Build-Timestamp': new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
                    'Created-By'     : "Gradle ${gradle.gradleVersion}",
@@ -57,6 +67,121 @@ jar {
     }
     baseName 'org.speechforge.cairo.server'
 }
+
+task xsltCairoConfig(type: com.github.eerohele.SaxonXsltTask)  {
+    stylesheet "${projectDir}/src/main/config/patch-configuration.xsl"
+    input "${projectDir}/src/main/config/cairo-config.xml"
+    output "${buildDir}/config/cairo-config.xml"
+    parameters(
+        recordDir: CAIRO_RECORD_DIR,
+        grammarDir: CAIRO_GRAMMAR_DIR,
+        voice: CAIRO_VOICE,
+        promptDir: CAIRO_PROMPT_DIR,
+        ipAddress: getIP()
+    )
+}
+
+task createConfiguration(type: Copy) {
+    dependsOn xsltCairoConfig
+
+    into "${buildDir}/config"
+    from("${projectDir}/src/main/config") {
+        exclude '*.xsl',
+            'cairo-config.xml'
+    }
+}
+
+def getIP() {
+    InetAddress result = null;
+    Enumeration<NetworkInterface> interfaces = NetworkInterface.getNetworkInterfaces();
+    while (interfaces.hasMoreElements()) {
+        Enumeration<InetAddress> addresses = interfaces.nextElement().getInetAddresses();
+        while (addresses.hasMoreElements()) {
+            InetAddress address = addresses.nextElement();
+            if (!address.isLoopbackAddress()) {
+                if (address.isSiteLocalAddress()) {
+                    return address.getHostAddress();
+                } else if (result == null) {
+                    result = address;
+                }
+            }
+        }
+    }
+    return (result != null ? result : InetAddress.getLocalHost()).getHostAddress();
+}
+
+task createTransmitterApp(type: CreateStartScripts) {
+    dependsOn createConfiguration
+    
+    mainClassName = "org.speechforge.cairo.server.resource.TransmitterResource"
+    classpath = startScripts.classpath + files('../config')
+    outputDir = startScripts.outputDir
+    applicationName = "transmitter"
+    defaultJvmOpts = ["-Xms1024m", "-Xmx2048m", "-XX:+UseConcMarkSweepGC",
+               "-Dsun.rmi.dgc.client.gcInterval=3600000",
+               "-Dsun.rmi.dgc.server.gcInterval=3600000",
+               "-Djava.security.manager",
+               "-Djava.security.policy=config/jvoicexml.policy",
+               "-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager",
+               "-DCAIRO_CONFIG=../config/cairo-config.xml"]
+    doLast {
+        def windowsScriptFile = file getWindowsScript()
+        def unixScriptFile = file getUnixScript()
+        windowsScriptFile.text = windowsScriptFile.text.replace('%APP_HOME%\\lib\\config', '%APP_HOME%\\config')
+        unixScriptFile.text = unixScriptFile.text.replace('$APP_HOME/lib/config', '$APP_HOME/config')
+    }
+}
+
+task createReceiverApp(type: CreateStartScripts) {
+    dependsOn createConfiguration
+    
+    mainClassName = "org.speechforge.cairo.server.resource.ReceiverResource"
+    classpath = startScripts.classpath + files('../config')
+    outputDir = startScripts.outputDir
+    applicationName = "receiver"
+    defaultJvmOpts = ["-Xms1024m", "-Xmx2048m", "-XX:+UseConcMarkSweepGC",
+               "-Dsun.rmi.dgc.client.gcInterval=3600000",
+               "-Dsun.rmi.dgc.server.gcInterval=3600000",
+               "-Djava.security.manager",
+               "-Djava.security.policy=config/jvoicexml.policy",
+               "-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager",
+               "-DCAIRO_CONFIG=../config/cairo-config.xml",
+               "-DCAIRO_RECORD_DIR=%%RECORD_DIR%%"]
+    doLast {
+        def windowsScriptFile = file getWindowsScript()
+        def unixScriptFile = file getUnixScript()
+        windowsScriptFile.text = windowsScriptFile.text.replace('%APP_HOME%\\lib\\config', '%APP_HOME%\\config')
+        unixScriptFile.text = unixScriptFile.text.replace('$APP_HOME/lib/config', '$APP_HOME/config')
+    }
+}
+
+startScripts {
+    dependsOn createTransmitterApp
+    dependsOn createReceiverApp
+    
+    mainClassName = "org.speechforge.cairo.server.resource.ResourceServerImpl"
+    classpath += files('../config')
+    applicationName = "rserver"
+    //javaOpts = [ "-sipPort", "5050", "-sipTransport", "udp" ]
+    defaultJvmOpts = ["-Xms1024m", "-Xmx2048m", "-XX:+UseConcMarkSweepGC",
+               "-Dsun.rmi.dgc.client.gcInterval=3600000",
+               "-Dsun.rmi.dgc.server.gcInterval=3600000",
+               "-Djava.security.manager",
+               "-Djava.security.policy=config/jvoicexml.policy",
+               "-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager"]
+    doLast {
+        def windowsScriptFile = file getWindowsScript()
+        def unixScriptFile = file getUnixScript()
+        windowsScriptFile.text = windowsScriptFile.text.replace('%APP_HOME%\\lib\\config', '%APP_HOME%\\config')
+        unixScriptFile.text = unixScriptFile.text.replace('$APP_HOME/lib/config', '$APP_HOME/config')
+    }
+}
+
+applicationDistribution.from("${buildDir}/config") {
+    include "*"
+    into 'config'
+}
+
 
 publishing {
     publications {
